fix extra margin above first column

--- a/app/assets/styles/region/_global.scss
+++ b/app/assets/styles/region/_global.scss
@@ -25,7 +25,7 @@
     color: $primary-color;
     font-weight: $base-font-bold;
     font-size: 1.2rem;
-    margin: ($global-spacing * 1.5) 0;
+    padding: ($global-spacing * 1.5) 0;
   }
 
   .region-countries__list {
